# verbatim-intelligence

./: .gitignore  .trivyignore.yaml  CLAUDE.md  JOURNAL.md  Makefile  compose.yaml
.claude/skills/doc-check/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
ai-worker/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml
ai-worker/src/ai_worker/: __init__.py  database.py  language.py  llm.py  pipeline.py  processing.py  reaper.py  redis_queue.py
ai-worker/tests/: conftest.py  test_database.py  test_language.py  test_llm.py  test_pipeline.py  test_processing.py  test_reaper.py
backend/: .dockerignore  Directory.Build.props  Dockerfile  Dockerfile.dev  VerbatimIntelligence.slnx
backend/tests/: Directory.Build.props
docs/: architecture.md  glossary.md  practices.md  rgpd.md  roadmap.md  runbooks.md  schema.md  security-review.md  v1-spec.md
frontend/: .dockerignore  .gitignore  Caddyfile.prod  Dockerfile  Dockerfile.dev  biome.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts
frontend/e2e/: create-analysis.spec.ts  sign-in-and-create-analysis.spec.ts
frontend/src/: App.vue  session.ts
infra/ansible/: Dockerfile  ansible.cfg  inventory.yml  site.yml
infra/terraform/: .terraform.lock.hcl  backups.tf  main.tf  outputs.tf  tem.tf  variables.tf  versions.tf
scripts/: backup-restore-test.sh  check_docs.py
scripts/githooks/: pre-commit
spike/: README.md  pipeline.py
spike/golden/: corpus.json  themes.json
(+105 files in other folders)
